--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,7 +1,7 @@
 FROM d.thcen.com/php
 ENV TZ Asia/Shanghai
 WORKDIR /var/www/html
-COPY sdk .
-COPY data .
-COPY core .
+COPY sdk sdk
+COPY data data
+COPY core core
 COPY index.php .
